overflow fix

--- a/css/launcher.css
+++ b/css/launcher.css
@@ -17,6 +17,8 @@ body {
 
 html {
     font-size: 0.52115905774vw;
+    overflow-x: hidden;
+
 }
 
 
