--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 
 html {
     font-size: 0.52115905774vw;
+    overflow-x: hidden;
 }
 
 body {
